version/dev/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/Interfaces/IDataTable.rst.txt
.. vale off



:class:`IDataTable`
===================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.Interfaces.IDataTable

   Bases: :py:obj:`object`



.. py:currentmodule:: IDataTable

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Add`
            - Add a new column to the data table.
          * - :py:attr:`~Clear`
            - Drops all columns from the data table.
          * - :py:attr:`~Contains`
            - Returns whether the data table contains a column with the specified name.
          * - :py:attr:`~GetEnumerator`
            - GetEnumerator method.
          * - :py:attr:`~GetRow`
            - 
          * - :py:attr:`~Insert`
            - Insert a column at the specified index.
          * - :py:attr:`~Remove`
            - Removes the specified column. If the specifier of the column to remove is an T:System.Int32, it will
          * - :py:attr:`~TryInsertRow`
            - Try to insert the values at the specified row index.
          * - :py:attr:`~TryRemoveRow`
            - Try to remove the specified row.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ColumnNames`
            - 
          * - :py:attr:`~Columns`
            - Explicitly get the columns of the data table.
          * - :py:attr:`~Count`
            - Gets the number of columns in the table.
          * - :py:attr:`~IsFixedColumnCount`
            - Get whether additional columns can be added or removed from the contained T:Ansys.Mechanical.Interfaces.IDataSeries.
          * - :py:attr:`~IsFixedRowCount`
            - Get whether additional rows can be added or removed from the contained
          * - :py:attr:`~IsReadOnly`
            - Gets whether the data table is read-only.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~Metadata`
            - Gets or set a dictionary with additional information that may be useful to understanding
          * - :py:attr:`~Name`
            - Get or set the name of the table.
          * - :py:attr:`~RowCount`
            - 







Property detail
---------------
.. py:property:: ColumnNames
   :type: Optional[tuple[str]]


.. py:property:: Columns
   :type: Optional[List[Ansys.Mechanical.Interfaces.IDataSeries]]


   
   Explicitly get the columns of the data table.
















   ..
       !! processed by numpydoc !!

.. py:property:: Count
   :type: Optional[int]


   
   Gets the number of columns in the table.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsFixedColumnCount
   :type: Optional[bool]


   
   Get whether additional columns can be added or removed from the contained T:Ansys.Mechanical.Interfaces.IDataSeries.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsFixedRowCount
   :type: Optional[bool]


   
   Get whether additional rows can be added or removed from the contained
   T:Ansys.Mechanical.Interfaces.IDataSeries.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsReadOnly
   :type: Optional[bool]


   
   Gets whether the data table is read-only.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.Mechanical.Interfaces.IDataSeries]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Metadata
   :type: Optional[dict[str, Any]]


   
   Gets or set a dictionary with additional information that may be useful to understanding
   the context of data in the table.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Get or set the name of the table.
















   ..
       !! processed by numpydoc !!

.. py:property:: RowCount
   :type: Optional[int]






Method detail
-------------
.. py:method:: Add(dataSeries: Ansys.Mechanical.Interfaces.IDataSeries) -> None

   
   Add a new column to the data table.

   ..
       !! processed by numpydoc !!

.. py:method:: Clear() -> None

   
   Drops all columns from the data table.

   ..
       !! processed by numpydoc !!

.. py:method:: Contains(name: str) -> bool

   
   Returns whether the data table contains a column with the specified name.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Iterator

   
   GetEnumerator method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetRow(rowIndex: int) -> Iterable
   

.. py:method:: Insert(columnIndex: int, dataSeries: Ansys.Mechanical.Interfaces.IDataSeries) -> None

   
   Insert a column at the specified index.

   ..
       !! processed by numpydoc !!

.. py:method:: Remove(key: Any) -> None

.. code-block:: text

   Removes the specified column. If the specifier of the column to remove is an T:System.Int32, it will
   be interpreted as an index. If the specifier of the column to remove is a T:System.String, it will
   be interpreted as a column name.

..
       !! processed by numpydoc !!

.. py:method:: TryInsertRow(rowIndex: int, values: Iterable) -> bool

   
   Try to insert the values at the specified row index.

   ..
       !! processed by numpydoc !!

.. py:method:: TryRemoveRow(rowIndex: int) -> bool

   
   Try to remove the specified row.

   ..
       !! processed by numpydoc !!



.. vale on